embedded launch4j executable in distribution